[gd_scene load_steps=5 format=2]

[ext_resource path="res://Source/Gameplay/Map/Country/Country.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Map/Countries/Afghanistan.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Map/Borders/Afghanistan.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 54.8251, 50.6346 )

[node name="Country" type="Area2D" groups=[
"Country",
]]
scale = Vector2( 0.33, 0.29 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Country" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Border" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BorderRect" type="ColorRect" parent="."]
visible = false
modulate = Color( 0.733333, 0.733333, 0.733333, 1 )
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountryRect" type="ColorRect" parent="."]
visible = false
margin_left = -140.0
margin_top = -140.0
margin_right = 140.0
margin_bottom = 140.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
